# deferred-renderer-gl

./: .gitignore  .gitmodules  .ninja_deps  .ninja_log  CMakeLists.txt  README.md  build.ninja
cmake/: FindGLFW.cmake  utils.cmake
include/: renderer.h
include/engine/: api.h  engine.h  entity.h  renderer.h  types.h
include/framework/: api.h  camera.h  component.h  engine.h  entity.h  game.h  light.h  material.h  math.h  mesh.h  model.h  preprocessor.h  renderer.h  shader.h  texture.h  types.h  utils.h
include/game/: avatar.h  game.h  player.h  types.h
resources/engine/shaders/: lighting.vert
resources/framework/: config.json
resources/framework/shaders/: finalPass.frag  finalPass.vert  gbuffer.frag  gbuffer.vert  geometry.frag  geometry.vert  lambert.frag  lambert.vert  lambertGeom.frag  lambertGeom.vert  lambertLight.frag  lambertLight.vert  light.frag  lighting.frag  lighting.vert  pointLight.frag  pointLight.vert
resources/game/: config.json
resources/game/environment/: skysphere.dae
resources/game/sponzaScene/: sponzaStructureMAT.mtl
resources/game/sponzaScene/sponzaCubemap/: environmentprobe_cm.dds  environmentprobe_cm.tif  environmentprobe_cm_diff.dds
resources/game/sponzaScene/sponzaTextures/: background_diff.dds  chain_texture_ddn.dds  chain_texture_diff.dds  glow_a.dds  lion2_ddn.dds  lion_diff.dds  sponza_arch_ddna.dds  sponza_arch_diff.dds  sponza_arch_spec.dds  sponza_bricks_a_ddna.dds  sponza_bricks_a_diff.dds  sponza_bricks_a_spec.dds  sponza_ceiling_a_ddna.dds  sponza_ceiling_a_diff.dds  sponza_ceiling_a_spec.dds  sponza_column_a_ddna.dds  sponza_column_a_diff.dds  sponza_column_a_spec.dds  sponza_column_b_ddna.dds  sponza_column_b_diff.dds  sponza_column_b_spec.dds  sponza_column_c_ddna.dds  sponza_column_c_diff.dds  sponza_column_c_spec.dds  sponza_curtain_blue_diff.dds  sponza_curtain_diff.dds  sponza_curtain_green_diff.dds  sponza_details_ddna.dds  sponza_details_diff.dds  sponza_details_spec.dds  sponza_fabric_blue_diff.dds  sponza_fabric_diff.dds  sponza_fabric_green_diff.dds  sponza_fabric_spec.dds  sponza_flagpole_diff.dds  sponza_flagpole_spec.dds  sponza_floor_a2_ddna.dds  sponza_floor_a_ddna.dds  sponza_floor_a_diff.dds  sponza_floor_a_spec.dds  (+12 more)
shaders/: config.json
shaders/entities/enemy/: model.dae
src/: main.cpp
src/engine/: CMakeLists.txt  engine.cpp  entity.cpp  renderer.cpp  types.cpp
src/framework/: CMakeLists.txt  GhostGameFrameworkd.exp  GhostGameFrameworkd.lib  camera.cpp  component.cpp  engine.cpp  entity.cpp  game.cpp  light.cpp  material.cpp  math.cpp  mesh.cpp  model.cpp  renderer.cpp  shader.cpp  texture.cpp  types.cpp  utils.cpp
src/game/: CMakeLists.txt  avatar.cpp  game.cpp  ghost.cpp  main.cpp  player.cpp  types.cpp
